add js coverage generator

--- a/.eslintrc
+++ b/.eslintrc
@@ -18,7 +18,7 @@
         "objects": "never",
         "imports": "never",
         "exports": "never",
-        "functions": "ignore",
+        "functions": "ignore"
     }],
     "react/prop-types": [2]
   },
