--- a/package.json
+++ b/package.json
@@ -4,11 +4,8 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"c9": "webpack-dev-server --mode development --open --host $IP --port $PORT",
-		"gitpod": "webpack-dev-server --mode development --open --port 3000",
 		"start": "webpack-dev-server --mode development --hot",
-		"build": "webpack --mode development",
-		"deploy": "node deploy-to-github.js"
+		"build": "webpack --mode development"
 	},
 	"author": "Alejandro Sanchez",
 	"license": "ISC",
@@ -51,8 +48,11 @@
 		]
 	},
 	"dependencies": {
+		"@forevolve/bootstrap-dark": "^1.2.0-g6c89781692",
 		"bootstrap": "^4.1.3",
+		"cssbeautify": "^0.3.1",
 		"jquery": "^3.3.1",
+		"js-beautify": "^1.14.0",
 		"popper.js": "^1.12.9",
 		"prop-types": "^15.6.1",
 		"query-string": "^5.1.1",
